--- a/people/index.html
+++ b/people/index.html
@@ -6,12 +6,12 @@ layout: default
 <div class="container">
 
   <h2 class="page-title">
-    Fellows
+    2013 Fellows
     <hr>
   </h2>
 
-  <p>We're bringing thirty six aspiring data scientists from across the country to Chicago. They're graduate and undergraduate students from quantitative and computational fields - from computer science to statistics to public policy.</p> 
-  <p>From June to August, they'll work in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows will explore dozens of datasets, analyze them to discover useful insights, and learn from decision-makers on the front lines of public policy.</p> 
+  <p>The 2013 program brought thirty six aspiring data scientists from across the country to Chicago. They were graduate and undergraduate students from quantitative and computational fields - from computer science to statistics to public policy.</p> 
+  <p>From beginning of June to end of August, they worked in small teams on an analytics project for a nonprofit, local government, or federal agency. Fellows explored dozens of datasets, analyzed them to discover useful insights, and learned from decision-makers on the front lines of public policy.</p> 
   <div class="row section people">
     <div class="span2">
       <img src="/img/people/adhikari.jpg" alt="Samrachana Adhikari">
@@ -310,11 +310,11 @@ layout: default
 
 
   <h2 id="mentors">
-    Mentors
+    2013 Mentors
     <hr>
   </h2>
   <p>
-    Our mentors are experienced data scientists and researchers from business, academia, and nonprofits. They'll work with fellow teams full-time this summer. They'll help fellows brainstorm projects, apply their coding and quantitative skills, and work with partner organizations. 
+    Our mentors are experienced data scientists and researchers from business, academia, and nonprofits. They work with fellow teams full-time during the summer. They help fellows brainstorm projects, apply their coding and quantitative skills, and work with partner organizations. 
   </p>
 
   <div class="row section people">
@@ -365,11 +365,11 @@ layout: default
   </div>
 
   <h2 id="volunteer-mentors">
-    Volunteer Mentors
+    2013 Volunteer Mentors
     <hr>
   </h2>
   <p>
-    Professional data scientists, web developers, and researchers from Chicago's data community and beyond. They're sharing their skills and expertise with the fellows part-time.
+    Professional data scientists, web developers, and researchers from Chicago's data community and beyond. They share their skills and expertise with the fellows part-time.
   </p>
 
   <div class="row section people">
@@ -447,11 +447,11 @@ layout: default
   </div>
 
   <h2 id="staff">
-    Staff
+    2013 Staff
     <hr>
   </h2>
   <p>
-    The fellowship is lead by <a href="http://www.rayidghani.com">Rayid Ghani</a>, former chief data scientist of the 2012 Obama campaign, and organized by an interdisciplinary team from the <a href="http://www.ci.uchicago.edu/">Computation Institute</a>, a joint initiative between the University of Chicago and Argonne National Laboratory    
+    The fellowship is led by <a href="http://www.rayidghani.com">Rayid Ghani</a>, former chief data scientist of the 2012 Obama campaign, and organized by an interdisciplinary team from the <a href="http://www.ci.uchicago.edu/">Computation Institute</a>, a joint initiative between the University of Chicago and Argonne National Laboratory    
   </p>
 
   <div class="row section people">
@@ -521,15 +521,6 @@ layout: default
       <p>Chairman of Google</p>
       <div class="icons">
         <a href="http://www.twitter.com/ericschmidt"><i class="ss-twitter"></i></a>
-      </div>
-    </div>
-    <div class="span4">
-      <img src="/img/people/porway.jpg" alt="Jake Porway">
-      <h6>Jake Porway</h6> 
-      <p>Founder and executive director of DataKind</p>
-      <div class="icons">
-        <a href="http://www.twitter.com/jakeporway"><i class="ss-twitter"></i></a>
-        <a href="https://www.github.com/jakeporway"><i class="ss-octocat"></i></a>
       </div>
     </div>
     <div class="span4">
