--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ layout: default
         <div class="row demo-row">
          <div class="span3">Deadline: <del>February 1, 2014</del>
           </div>
-         <div class="span3">Deadline: </del>February 1, 2014</del>
+         <div class="span3">Deadline: <del>February 1, 2014</del>
             
          </div>
-       <div class="span3">Deadline: </del>January 10, 2014</del></div>
+       <div class="span3">Deadline: <del>January 10, 2014</del></div>
            </div>   
     Application deadlines for the 2014 Summer Program are over. <a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us before or after the summer as a fellow, mentor, or project partner.
 
