--- a/projects/index.html
+++ b/projects/index.html
@@ -6,17 +6,20 @@ published: true
 <div class="container">
 
   <h2 class="page-title">
-    Projects
+    2013 Projects
     <hr>
   </h2>	
   <p>
-  	This summer, our fellows will work on data science projects in health, education, energy, transportation, and more.
-  </p>
-   <p> 
-  	Our program is intensive and hands-on. Fellows will work directly with <strong>nonprofits</strong>, <strong>local governments</strong>, and <strong>federal agencies</strong>, learning about what they do and tackling data problems they face.
+  	During the  program, our fellows  work on data science projects in health, education, energy, transportation, and more.
   </p>
   <p>
-  	We're strong believers in open knowledge and open source. We'll blog extensively about our projects, and make much of our research and code open to everyone.
+    Projects for the 2014 program will be announced soon. We are busy working with our project partners to define and prepare for the projects.
+  </p>
+   <p> 
+  	Our program is intensive and hands-on. Fellows  work directly with <strong>nonprofits</strong>, <strong>local governments</strong>, and <strong>federal agencies</strong>, learning about what they do and tackling data problems they face.
+  </p>
+  <p>
+  	We're strong believers in open knowledge and open source. We blog extensively about our projects, and make much of our research and code open to everyone.
   </p>
 
   <!-- Iterate through projects and display info -->
