--- a/people/index.html
+++ b/people/index.html
@@ -6,6 +6,15 @@ layout: default
 <div class="container">
 
   <h2 class="page-title">
+    2014 Fellows
+    <hr>
+  </h2>
+ 
+<p> We have selected 48 fellows for the 2014 summer fellowship class. WE'll be updating this space soon with more details aobut them.
+
+  
+</p>
+  <h2 class="page-title">
     2013 Fellows
     <hr>
   </h2>
