--- a/people/index.html
+++ b/people/index.html
@@ -10,7 +10,8 @@ layout: default
     <hr>
   </h2>
  
-<p> We have selected 48 fellows for the 2014 summer fellowship class. WE'll be updating this space soon with more details aobut them.
+<p> We have selected 48 fellows for the 2014 summer fellowship class. We'll be updating this page
+soon with more details about them.
 
   
 </p>
