--- a/contact/index.html
+++ b/contact/index.html
@@ -9,8 +9,13 @@ layout: default
     <hr>
   </h2>
 
+
   <h4>
-  	We're already getting ready for the 2014 program and looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
+  	We're looking for funding to expand the summer projects to around the year. If you are a foundation, corporation, or individual who wantsto support us 9or know people who can), <a href="mailto:datascifellows@gmail.com">please contact us</a>.
+  </h4> 
+  
+  <h4>
+  	We're getting ready to start the 2014 summer program. We will be looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
   </h4> 
   <p></p>
   <div class="row">
