--- a/contact/index.html
+++ b/contact/index.html
@@ -11,9 +11,10 @@ layout: default
 
 
   <h4>
-  	We're looking for funding to expand the summer projects to around the year. If you are a foundation, corporation, or individual who wantsto support us 9or know people who can), <a href="mailto:datascifellows@gmail.com">please contact us</a>.
+  	We're looking for funding to expand the summer projects to around the year. If you are a foundation, corporation, or individual who wants to support us (or know people who can), <a href="mailto:datascifellows@gmail.com">please contact us</a>.
   </h4> 
-  
+  <p></p>
+  <p></p>
   <h4>
   	We're getting ready to start the 2014 summer program. We will be looking for data science for social good projects, fellows, mentors, and funding for the fall and next summer
   </h4> 
