Added new mentors

--- a/people/index.html
+++ b/people/index.html
@@ -397,6 +397,11 @@
   
   <div class="row section people">
     <div class="span4">
+      <a href="http://sociology.uchicago.edu/people/faculty/cagney.shtml"><img src="/img/people/cagney.jpg" alt="Kate Cagney"></a>
+      <h6>Kate Cagney</h6>
+      <p>Associate Professor, Sociology and Health Studies & Director, Population Research Center, NORC & University of Chicago</p>
+    </div>
+    <div class="span4">
       <a href="http://www.cse.buffalo.edu/~chandola/"><img src="/img/people/chandola.jpg" alt="Varun Chandola"></a>
       <h6>Varun Chandola</h6>
       <p>Assistant Professor of Computer Science and Engineering at the University of Buffalo</p>
@@ -404,7 +409,7 @@
     <div class="span4">
       <a href="https://www.linkedin.com/pub/young-jin-kim/56/102/17"><img src="/img/people/kim.jpg" alt="Young Jin Kim"></a>
       <h6>Young-Jin Kim</h6>
-      <p>Managing Director at Emphanos LLC</p>
+      <p>Managing Director at Emphanos</p>
     </div>
     <div class="span4">
       <a href="https://www.linkedin.com/pub/thomas-plagge/52/aa6/288"><img src="/img/people/plagge.jpg" alt="Tom Plagge"></a>
@@ -420,6 +425,11 @@
       <a href="https://www.linkedin.com/in/joestradamus"><img src="/img/people/walsh.jpg" alt="Joe Walsh"></a>
       <h6>Joe Walsh</h6>
       <p>Lead Forecaster for GE Healthcare, Policy Consultant for Community Technical Resources</p>
+    </div>
+    <div class="span4">
+      <a href="http://www.yuhasgroup.com/bios.htm"><img src="/img/people/yuhas.jpg" alt="Ben Yuhas"></a>
+      <h6>Ben Yuhas</h6>
+      <p>Principal at Yuhas Consulting Group</p>
     </div>
   </div>
 
