--- a/people/index.html
+++ b/people/index.html
@@ -452,7 +452,7 @@
       <a href="http://harrisschool.uchicago.edu/directory/phd-students/matthew_gee"><img src="/img/people/gee.jpg" alt="Matt Gee"></a>
       <h6>Matt Gee</h6>
       <p>
-        Policy PhD student at the University of Chicago, former analyst at U.S. Treasury
+        Research Fellow at the Urban Center for Computation and Data
       </p>
     </div>
     <div class="span4">
