Added Turner photo

--- a/people/index.html
+++ b/people/index.html
@@ -356,7 +356,7 @@
     <p>New York University</p>
   </div>     
   <div class="span2">
-    <a href="https://www.linkedin.com/pub/rafael-turner/25/52a/356"><img src="/img/logo.png" alt="Rafael Turner"></a>
+    <a href="https://www.linkedin.com/pub/rafael-turner/25/52a/356"><img src="/img/people/turner.jpg" alt="Rafael Turner"></a>
     <h6>Rafael Turner</h6>
     <p>Computer Science</p>
     <p>University of Chicago</p>
