--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ layout: default
       We’re training data scientists to tackle problems that really matter.
     </h2>
     <p></p>
-    Application deadlines for the 2014 Summer Program are over. <p>
-    <a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us after the summer 
+    The 2014 Program is starting on June 2 - Meet the <a href="people/">new Fellows and Mentors</a> !
+    <a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer or <a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us after the summer 
     as a Post-doc, Student, or Project Partner.
   </div>
 </div>
