--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
       We’re training data scientists to tackle problems that really matter.
     </h2>
     <p></p>
-    The 2014 Program is starting on June 2 - Meet the <a href="people/">new Fellows and Mentors</a> !
+    <p>The 2014 Program is starting on June 2 - Meet the <a href="people/">new Fellows and Mentors</a>!</p>
     <a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer or <a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us after the summer 
     as a Post-doc, Student, or Project Partner.
   </div>
