--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ layout: default
 <p></p>
 <div class="dialog dialog-success">
   <div class="container">
-    <p></p>
+   
     <h2 id="slogan" class="lead">
       We’re training data scientists to tackle problems that really matter.
     </h2>
     <p></p>
     <p>The 2014 Program is starting on June 2 - Meet the <a href="people/">new Fellows and Mentors</a>!</p>
-    <a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer or <a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us after the summer 
-    as a Post-doc, Student, or Project Partner.
+    <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer </p>
+    <p><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
   </div>
 </div>
 
