--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ layout: default
     </h2>
     <p></p>
     <p>The 2014 Program is starting on June 2 - Meet the <a href="people/">new Fellows and Mentors</a>!</p>
-    <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer </p>
-    <p><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
+    <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
+    <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
   </div>
 </div>
 
