Changed Perez link

--- a/people/index.html
+++ b/people/index.html
@@ -278,7 +278,7 @@
     <p>Northwestern University</p>
   </div>  
   <div class="span2">
-    <a href="http://www.lvaqi.org/"><img src="/img/people/perez.jpg" alt="Miguel Perez"></a>
+    <a href="https://www.linkedin.com/profile/view?id=337090498"><img src="/img/people/perez.jpg" alt="Miguel Perez"></a>
     <h6>Miguel Perez</h6>
     <p>Architecture</p>
     <p>School of the Art Institute of Chicago</p>
