Changed Sarah Tan's name

--- a/people/index.html
+++ b/people/index.html
@@ -339,7 +339,7 @@
   </div> 
   <div class="span2">
     <a href="http://www.linkedin.com/pub/sarah-tan/75/183/310"><img src="/img/people/tan.jpg" alt="Hui Fen Tan"></a>
-    <h6>Hui Fen Tan</h6>
+    <h6>Sarah Tan</h6>
     <p>Statistics</p>
     <p>Cornell University</p>
   </div>
