Removed video from front page; added photo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@ layout: default
 
 
 </div>
-<center>
-<iframe width="480" height="360" src="//www.youtube.com/embed/V_ndznCKjg4?rel=0" frameborder="0" allowfullscreen></iframe>
-</center>
+
 <p></p>
 <div class="dialog dialog-success">
   <div class="container">
@@ -26,7 +24,10 @@ layout: default
       We’re training data scientists to tackle problems that really matter.
     </h2>
     <p></p>
-    <p>The 2014 Program is starting on June 2 - Meet the <a href="people/">new Fellows and Mentors</a>!</p>
+    <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
+    <p>Today at DSSG: Introductions and Summer Goals</p>
+    <img src="/img/front/post-its.jpg">
+    <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
   </div>
@@ -146,5 +147,3 @@ layout: default
 <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> -->
 <!-- <script type="text/javascript" src="/js/jquery.stellar.min.js"></script> -->
 <!-- <script type="text/javascript" src="/js/site.js"></script> -->
-
-
