Updated front page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ layout: default
     </h2>
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
-    <p>Today at DSSG: Bootcamp Day 2: Amazon Web Services, Tableau, and MapReduce. Visits from Non-Profits.</p>
-    <img src="/img/front/nonprofits-ASM.JPG">
+    <p>Today at DSSG: Learning about last year's work, and planning this year's projects</p>
+    <img src="/img/front/project-review.JPG">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
