--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -121,8 +121,8 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
                       </ul>
                       <br />
                       </strong>
-				        <p dir="ltr"><strong>Please email submissions in PDF format </strong>*by July 1st, 2014<strong>* to <a href="mailto:kddworkshop@edgeflip.com">kddworkshop@edgeflip.com</a></strong></p>
-<br />
+				        <p dir="ltr"><strong>Please email submissions in PDF format </strong>*by July 1st, 2014<strong>* to <a href="mailto:kddworkshop@edgeflip.com">kddworkshop@edgeflip.com.</a></strong> Page limit is under 4 pages excluding references.</p>
+<br /> 
                       </div>
 			        </div>
 			      </div>
