--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ layout: default
         Working closely with governments and nonprofits, fellows take on <strong>real-world problems</strong> in education, health, energy, transportation, and more.
       </p>
       <p>
-        For <strong>three months in Chicago</strong> they apply their coding and analytics skills, collaborate in a fast-paced atmosphere, and learn from mentors coming from industry, academia, and the Obama campaign.
+        For <strong>three months in Chicago</strong> they apply their coding and analytics skills, collaborate in a fast-paced atmosphere, and learn from mentors coming from industry and academia.
       </p>
-      <p>The 2014 program will bring 48 aspiring data scientists from across the country to Chicago. They are graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p>    
+      <p>The 2014 program is brining 48 aspiring data scientists from across the country to Chicago. They are graduate and undergraduate students from quantitative and computational fields - from computer science to machine learning to statistics to public policy.</p>    
       <p>From June 2 to the end of August, they will work in small teams on an analytics project in partnership with nonprofits, local governments, or federal agencies. Fellows will work on high impact problems, analyzing dozens of datasets, and learning from decision-makers on the front lines of public policy.</p> 
-    <p>Each team is led by full-time mentors who will serve as project leaders, techincal advisors, helping the fellows brainstorm ideas, and manage the relationship between the team of fellows and the project partners. 
+    <p>Each team is led by full-time mentors who will serve as project leads and techincal advisors. 
     </div>
   </div>
 
@@ -78,7 +78,7 @@ layout: default
       <h3>Staff</h3>
       <hr>
       <p>
-        The fellowship is led by <a href="http://www.rayidghani.com">Rayid Ghani</a> from the Computation Institute & Harris School of Public Policy at University of Chicago, and former chief data scientist of the 2012 Obama campaign. It's organized by an interdisciplinary team from the <a href="http://www.ci.uchicago.edu/">Computation Institute</a>, a joint initiative between the University of Chicago and Argonne National Laboratory. 
+        The fellowship is led by <a href="http://www.rayidghani.com">Rayid Ghani</a> from the Computation Institute & Harris School of Public Policy at the University of Chicago, and Former Chief Data Scientist of the 2012 Obama campaign. It's organized by an interdisciplinary team from the <a href="http://www.ci.uchicago.edu/">Computation Institute</a>, a joint initiative between the University of Chicago and Argonne National Laboratory. 
       </p>
       <br>
       <div class="people">
