Added new projects & logos, moved 2013 projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,14 +6,11 @@ published: true
 <div class="container">
 
   <h2 class="page-title">
-    2013 Projects
+    2014 Projects
     <hr>
   </h2>	
   <p>
   	During the  program, our fellows  work on data science projects in health, education, energy, transportation, and more.
-  </p>
-  <p>
-    Projects for the 2014 program will be announced soon. We are busy working with our project partners to define and prepare for the projects.
   </p>
    <p> 
   	Our program is intensive and hands-on. Fellows  work directly with <strong>nonprofits</strong>, <strong>local governments</strong>, and <strong>federal agencies</strong>, learning about what they do and tackling data problems they face.
@@ -21,10 +18,13 @@ published: true
   <p>
   	We're strong believers in open knowledge and open source. We blog extensively about our projects, and make much of our research and code open to everyone.
   </p>
+  <p>
+    We will post more detailed project descriptions soon. You can find our 2013 projects <a href="/projects/2013">here</a>.
+  </p>
 
   <!-- Iterate through projects and display info -->
   {% for post in site.posts %}
-    {% if post.type == 'org' %}
+    {% if post.type == 'org14' %}
 
       <div id="projects" class="row section">
 
