fixed front page typo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
     </h2>
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
-    <p>Today at DSSG: Learning from <a href="/projects">project partners</a> about food waste, homelessness, and urban revitalization. (Pictured: Ioannis Katsanos of IRi)</p>
+    <p>Today at DSSG: Learning from <a href="/projects">project partners</a> about food waste, homelessness, and urban revitalization. (Pictured: Ioannis Katsanos of IRI)</p>
     <img src="/img/front/iri-talk.JPG">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
