changed Chris' name

--- a/people/index.html
+++ b/people/index.html
@@ -182,12 +182,6 @@
     <p>Carnegie Mellon University</p>
   </div> 
   <div class="span2">
-    <a href="http://clazarus.com"><img src="/img/people/garcia.jpg" alt="Christopher Garcia"></a>
-    <h6>Christopher Garcia</h6>
-    <p>Applied Mathematics</p>
-    <p>Instituto Tecnológico Autónomo de México</p>
-  </div> 
-  <div class="span2">
     <a href="https://www.linkedin.com/profile/view?id=177396119"><img src="/img/people/green.jpg" alt="Ben Green"></a>
     <h6>Ben Green</h6>
     <p>Mathematics</p>
@@ -229,6 +223,12 @@
     <p>Computation</p>
     <p>Carnegie Mellon University</p>
   </div>
+  <div class="span2">
+    <a href="http://clazarus.com"><img src="/img/people/garcia.jpg" alt="Christopher Lazarus"></a>
+    <h6>Christopher Lazarus</h6>
+    <p>Applied Mathematics</p>
+    <p>Instituto Tecnológico Autónomo de México</p>
+  </div> 
   <div class="span2">
     <a href="http://storm.cis.fordham.edu/~lockhart"><img src="/img/people/lockhart.jpg" alt="Jeff Lockhart"></a>
     <h6>Jeff Lockhart</h6>
