--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
     <p>Today at DSSG: Week 3 begins, and all the fellows are finally here!</p>
-    <img src="/img/front/week3.JPG">
+    <img src="/img/front/week3.jpg">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
