--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ layout: default
     </h2>
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
-    <p>Today at DSSG: Week 3 begins, and all the fellows are finally here!</p>
-    <img src="/img/front/week3.jpg">
+    <p>Today at DSSG: Project Deep Dives with Sunlight Foundation, Montgomery County Public Schools, and World Bank (pictured) teams.</p>
+    <img src="/img/front/world-bank-deep-dive.JPG">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
