--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -121,7 +121,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
                       </ul>
                       <br />
                       </strong>
-				        <p dir="ltr"><strong>Please <a href="https://cmt.research.microsoft.com/DSSG2014/">upload submissions</a> in PDF format </strong>*by July 1st, 2014<strong>* to <a href="https://cmt.research.microsoft.com/DSSG2014/">here</a></strong> Page limit is under 4 pages excluding references.</p>
+				        <p dir="ltr"><strong>Please <a href="https://cmt.research.microsoft.com/DSSG2014/">upload submissions</a> in PDF format </strong>*by July 1st, 2014*</strong><a href="https://cmt.research.microsoft.com/DSSG2014/">here</a>. Page limit is under 4 pages excluding references.</p>
 				        Email us at <a href="mailto:kddworkshop@edgeflip.com">kddworkshop@edgeflip.com</a> for any questions.
 <br /> 
                       </div>
