Fixed formatting on energy pages

--- a/energy/instructions.html
+++ b/energy/instructions.html
@@ -64,7 +64,12 @@
 <div class="container">
     <div class="span12">
         <div class="span1"></div>
-            <h1 class="faq-header">Step-by-Step Instructions</h1><h4>(Scroll down to see each step)</h4><br>
+            <h2 class="page-title">
+            Step-by-Step Instructions
+            <hr>
+            </h2>
+
+            <h4>(Scroll down to see each step)</h4><br>
         <div class="row">
             <div class="span10 instructions">
                 1. Login to your <a href="http://www.comed.com/MyAccount" target="_blank">Comed account.</a><br>
