--- a/energy/faq.html
+++ b/energy/faq.html
@@ -66,7 +66,10 @@
         <div class="span1">
         </div>
         <div class="span10">
-            <h1 class="faq-header">FAQ</h1>
+            <h2 class="page-title">
+            FAQ
+            <hr>
+            </h2>
             <h3 class="faq-subtext">Smart Cities Energy Usage Data Collection</h3>
             <hr/>
             <h3>Why do you need to see my data?</h3>
