--- a/energy/faq.html
+++ b/energy/faq.html
@@ -100,6 +100,7 @@ Data Science for Social Good is a fellowship program at the University of Chicag
             <h4>Who are we?</h4>
             <p class="answer">
 Just a couple of heroes interested in saving energy!
+            <img src="/img/posts/energy-team.png">
             </p>
         </div>
         <div class="span1">
