--- a/energy/instructions.html
+++ b/energy/instructions.html
@@ -89,13 +89,14 @@
             <div class="span10 instructions">6. At the bottom of the page there is a Green Button which says <b>Download My Data</b>. Click on this button.<img id="logo" src="img/screenshots/gb_screenshot5.png"></div>
         </div>
         <div class="row">
-            <div class="span10 instructions"><b>7. In the popup which will appear after selecting the green button, click the Export all bill totals as an XML file. </b><img id="logo" src="img/screenshots/gb_screenshot6.png"></div>
+            <div class="span10 instructions">7. In the popup which will appear after selecting the green button, click the <b>'Export usage for a range of days'</b> as an XML file. Please select the earliest date available. <img id="logo" src="img/screenshots/gb_screenshot6.png"></div>
+        </div>
         </div>   
         <div class="row">
-            <div class="span10 instructions"><b>8. Complete <a href="http://datascience.wufoo.com/forms/smart-meter-data-release-consent-form/" target="_blank">this form</a>, in which you will approve DSSG to access your smart meter data.</b><img id="logo" src="img/logo.png"></div>
+            <div class="span10 instructions">8. Complete <a href="http://datascience.wufoo.com/forms/smart-meter-data-release-consent-form/" target="_blank">this form</a>, in which you will approve DSSG to access your smart meter data. <img id="logo" src="img/logo.png"></div>
         </div>   
         <div class="row">
-            <div class="span10 instructions"><b>9. The form will give you an option to upload your data. </b><img id="logo" src="img/logo.png"></div>
+            <div class="span10 instructions">9. The form will give you an option to upload your data. <img id="logo" src="img/logo.png"></div>
         </div>  
         <div class="row">
             <div class="span10 instructions"><b>Thanks!</b></div>
