updated front page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ layout: default
     </h2>
     <p></p>
     <p>Meet the <a href="people/">2014 Fellows and Mentors</a>!</p>
-    <p><del>Today</del> Last Night at DSSG: Presenting projects to <a href="http://opengovhacknight.org/index.html">OpenGov Hack Night</a> at 1871.</p>
-    <img src="/img/front/hacknight.jpeg">
+    <p><del>Today</del> Today at DSSG: Bright lights, big data.</p>
+    <img src="/img/front/bright-lights.JPG">
     <p></p>
     <p><a href="http://eepurl.com/zNWrT">Join our mailing list</a> if you want to attend events over the summer 
     <br><a href="mailto:datascifellows@gmail.com">Get in touch with us</a> if you want to work with us as a Post-doc, Student, or Project Partner.</p>
