--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -215,7 +215,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
 							<li id="search">
 							  <h2>Recent News</h2>
 							  <ul>
-								  <li>Call for Submissions is out!</li>
+								  <li>Accepted Papers have been announced!</li>
 							  </ul>
 								 
 								    <h2>Important Dates</h2>
