--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -24,7 +24,7 @@
   <body role="document">
 
     <!-- Fixed navbar -->
-    <div class="navbar  navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
