--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -1,4 +1,6 @@
 
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -52,7 +54,7 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Workshop on Data Science for Social Good</h1>
+        <h2>Workshop on Data Science for Social Good</h2>
         <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
 
@@ -86,6 +88,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
       <p>
       The workshop will be held on August 24, 2014 at Bloomberg Headquarters (731 Lexington Ave New York, NY 10022)
     </p>
+  </div>
 
 
 <div class="page-header">
@@ -179,6 +182,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
             </tbody>
           </table>
         </div>
+      </div>
         
 
 
