--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -260,7 +260,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
         </div>
        
 
-
+<p><a href="mailto:kddworkshop@edgeflip.com" class="btn btn-primary btn-lg" role="button">Contact Us</a></p>
 
 
 
