--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -55,8 +55,8 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h2>Workshop on Data Science for Social Good</h2>
-        <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
+        <h2>Workshop on Data Science for Social Good - 
+        <small>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></small></h2>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
 
       </div>
