--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -55,8 +55,8 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h2>Workshop on Data Science for Social Good - 
-        <small>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></small></h2>
+        <h2>Workshop on Data Science for Social Good</h2>
+        <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
 
       </div>
@@ -68,13 +68,13 @@
         Social Good organizations such as Non-profits and Governments have started to realize the value of data-driven decision-making. Many of them have started collecting better (and more) data. They are starting to investigate how data can be used make decisions. The challenge they now face is a lack of resources (both people and tools) to turn that initial interest into action. There is an urgent need to take this enthusiasm and interest from non-profits and government organizations and jumpstart efforts to help them along this path.
 
         <p>In order for data science to be used effectively for social good, three things need to happen: </p>
-                <p id="indent">
+            <ol>    <li>
                           1. Data Scientists need to understand the kinds of problems social good organizations face, and be interested and excited to work on them.
-                        <p id="indent">2. We need to develop tools/algorithms/methods that are tailored for problems facing social good organizations and social causes.
+                        <li>2. We need to develop tools/algorithms/methods that are tailored for problems facing social good organizations and social causes.
                          
-                        <p id="indent">
+                        <li>
                         3. We need to give proof-points and case studies to social good organizations that can help them understand the role of data science and how it can help them solve some of their critical challenges.
-                 
+            </ol>     
 <p>
 The KDD 2014 Data Science for Social Good workshop is aimed at filling these three needs. Since<a href="http://www.kdd.org/kdd2014"> KDD 2014</a> already has the special theme of Data Mining for Social Good, we want to use this venue to bring together researchers, practitioners, and organizations focused on social good in a smaller, more discussion-focused setting. The problems we want to focus on span a wide range of issues that face the world today such as education, healthcare, energy, transportation, climate change, public safety, disaster relief, poverty, and community development.
                   </p>
