--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -69,11 +69,11 @@
 
         <p>In order for data science to be used effectively for social good, three things need to happen: </p>
             <ol>    <li>
-                          1. Data Scientists need to understand the kinds of problems social good organizations face, and be interested and excited to work on them.
-                        <li>2. We need to develop tools/algorithms/methods that are tailored for problems facing social good organizations and social causes.
+                          Data Scientists need to understand the kinds of problems social good organizations face, and be interested and excited to work on them.
+                        <li>We need to develop tools/algorithms/methods that are tailored for problems facing social good organizations and social causes.
                          
                         <li>
-                        3. We need to give proof-points and case studies to social good organizations that can help them understand the role of data science and how it can help them solve some of their critical challenges.
+                        We need to give proof-points and case studies to social good organizations that can help them understand the role of data science and how it can help them solve some of their critical challenges.
             </ol>     
 <p>
 The KDD 2014 Data Science for Social Good workshop is aimed at filling these three needs. Since<a href="http://www.kdd.org/kdd2014"> KDD 2014</a> already has the special theme of Data Mining for Social Good, we want to use this venue to bring together researchers, practitioners, and organizations focused on social good in a smaller, more discussion-focused setting. The problems we want to focus on span a wide range of issues that face the world today such as education, healthcare, energy, transportation, climate change, public safety, disaster relief, poverty, and community development.
@@ -98,7 +98,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
       <p>
       <div class="row">
         <div class="col-md-12">
-          <table class="table">
+          <table class="table table-hover table-striped">
             <thead>
               <tr>
                 <th>#</th>
