--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -101,9 +101,9 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
           <table class="table table-hover table-striped">
             <thead>
               <tr>
-                <th>#</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th>Time</th>
+                <th></th>
+                <th></th>
                 
               </tr>
             </thead>
