--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -54,7 +54,17 @@
     <div class="container theme-showcase" role="main">
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <header class="jumbotron subhead" id="overview">
+  <div class="container">
+    <h1>Getting started</h1>
+    <p class="lead">Overview of the project, its contents, and how to get started with a simple template.</p>
+    <div id="carbonads-container"><div class="carbonad"><div id="azcarbon"></div><script type="text/javascript">var z = document.createElement("script"); z.type = "text/javascript"; z.async = true; z.src = "http://engine.carbonads.com/z/32341/azcarbon_2_1_0_HORIZDARK"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(z, s);</script></div></div>
+  </div>
+</header>
+
+
+
+      <div class="jumbotron masthead">
         <h2>Workshop on Data Science for Social Good</h2>
         <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
