--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -55,7 +55,7 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
 
-      <div class="jumbotron">
+      <div class="jumbotron subhead">
         <h2>Workshop on Data Science for Social Good</h2>
         <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
