--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -12,6 +12,10 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>KDD 2014 Workshop on Data Science for Social Good</title>
+<style>
+.other-color{ background: blue}
+</style>
+
 
  <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -55,7 +59,7 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
 
-      <div class="jumbotron subhead">
+      <div class="jumbotron subhead other-color">
         <h2>Workshop on Data Science for Social Good</h2>
         <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
