--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -13,7 +13,7 @@
 
     <title>KDD 2014 Workshop on Data Science for Social Good</title>
 <style>
-.other-color{ background: blue}
+.other-color {background: blue;}
 </style>
 
 
