--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -60,8 +60,9 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
 
       <div class="jumbotron subhead other-color">
-        <h2>Workshop on Data Science for Social Good</h2>
-        <p>Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
+        <h2 color="white">Workshop on Data Science for Social Good</h2>
+        <p  color="white">Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
+        <p  color="white">August 24, 2014</p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
 
       </div>
