--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -14,6 +14,7 @@
     <title>KDD 2014 Workshop on Data Science for Social Good</title>
 <style>
 .other-color {background-color: #800000 !important;}
+.jumbotron {text-align:center; color:"whitesmoke" !important;}
 </style>
 
 
@@ -60,9 +61,9 @@
       <!-- Main jumbotron for a primary marketing message or call to action -->
 
       <div class="jumbotron subhead other-color">
-        <h2 color="white">Workshop on Data Science for Social Good</h2>
-        <p  color="white">Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
-        <p  color="white">August 24, 2014</p>
+        <h2>Workshop on Data Science for Social Good</h2>
+        <p >Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
+        <p >August 24, 2014 </a></p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
 
       </div>
