--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -14,7 +14,7 @@
     <title>KDD 2014 Workshop on Data Science for Social Good</title>
 <style>
 .other-color {background-color: #800000 !important;}
-.jumbotron {text-align:center; color:"whitesmoke" !important;}
+.jumbotron {text-align:center; color: whitesmoke !important;}
 </style>
 
 
