--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -15,6 +15,7 @@
 <style>
 .other-color {background-color: #800000 !important;}
 .jumbotron {text-align:center; color: whitesmoke !important;}
+.navbar .nav > li > a { color:whitesmoke !important;}
 </style>
 
 
