--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -15,7 +15,12 @@
 <style>
 .other-color {background-color: #800000 !important;}
 .jumbotron {text-align:center; color: whitesmoke !important;}
-.navbar .nav > li > a { color:whitesmoke !important;}
+.navbar .nav > li > a { color:#e7e7e7 !important;}
+
+a {
+  color: #dddddd;
+}
+
 </style>
 
 
