--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -16,7 +16,7 @@
 .other-color {background-color: #800000 !important;}
 .jumbotron {text-align:center; color: whitesmoke !important;}
 .navbar .nav > li > a { color:#e7e7e7 !important;}
-.page-header {padding-left:30px !important;}
+.page-header {padding-left:30px !important; padding-right: 30px !important;}
 
 a {
   color: #dddddd;
