--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -239,7 +239,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
 
       <div class="page-header">
         <h1>Organizers</h1>
-
+</div>
         <div class="container>
     <div class="row-fluid">
         <h4 class="underline"><span>Recent images</span></h4>
