--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -239,27 +239,27 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
 
       <div class="page-header">
         <h1>Organizers</h1>
-</div>
+
         <div class="container>
     <div class="row-fluid">
         <h4 class="underline"><span>Recent images</span></h4>
 
         <div id="portfolio">
-          <div class="row-fluid">
-             <div class="span3">
+          <div class="row">
+             <div class="col-xs-3 col-md-3">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
                   <h5>Arindam Banerjee</h5>
           <p>
             University of Minnesota
           </p>
              </div>
-             <div class="span3">
+             <div class="col-xs-3 col-md-3">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>     
-             <div class="span3">
+             <div class="col-xs-3 col-md-3">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>     
-             <div class="span3">
+             <div class="col-xs-3 col-md-3">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>    
           </div>
