--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -246,24 +246,24 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
 
         <div id="portfolio">
           <div class="row">
-             <div class="col-xs-3 col-md-3">
+             <div class="col-xs-4 col-md-4">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
                   <h5>Arindam Banerjee</h5>
           <p>
             University of Minnesota
           </p>
              </div>
-             <div class="col-xs-3 col-md-3">
+             <div class="col-xs-4 col-md-4">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>     
-             <div class="col-xs-3 col-md-3">
+             <div class="col-xs-4 col-md-4">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>     
-             <div class="col-xs-3 col-md-3">
+             <div class="col-xs-4 col-md-4">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>    
           </div>
-          <div class="row-fluid"> 
+          <div class="row-flu"> 
              <div class="span3">
                   <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQSlkfizo8Zj0MGNAt2p9g4JFnjOT4017-sR0Cjodujh5Yqb8JJ">
              </div>     
