--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -142,11 +142,11 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
               </tr>
               <tr>
                 <td>10:30-11:30</td>
-                <td>Invited Panel: Social Good Opportunities and Challenges for Data Science</td> 
-                <td>Panelists:<br>Bechara Choucair (Chicago Department of Public Health)<br>
+                <td><b>Invited Panel:</b> Social Good Opportunities and Challenges for Data Science</td> 
+                <td><b>Panelists</b>:<br>Bechara Choucair (Chicago Department of Public Health)<br>
                   Jens Ludwig (Crime Lab University of Chicago)<br>
                   Gavin Schmidt (NASA Goddard Institute for Space Studies)<br>
-                  Moderator: Claire Monteleoni (George Washington University)</td>
+                  <b>Moderator</b>: <br>Claire Monteleoni (George Washington University)</td>
               </tr>
 
                             <tr>
