--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -153,7 +153,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
                 <td>11:30-12:30</td>
                 <td>Poster Spotlight Talks</td> 
                 <td>List of accepted papers<br>
-                  Moderator: Lise Getoor (University of California, Santa Cruz)</td>
+                  <b>Moderator</b>: Lise Getoor (University of California, Santa Cruz)</td>
               </tr>
               <tr>
                 <td>12:30-2:00</td>
@@ -164,13 +164,13 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
 
               <tr>
                 <td>2:00-3:30</td>
-                <td>Invited Panel: Success Stories in Applying Data Science for Social Good</td> 
-                <td>Panelists:<br>Zico Kolter (Carnegie Mellon University)<br>
+                <td><b>Invited Panel</b>: Success Stories in Applying Data Science for Social Good</td> 
+                <td><b>Panelists:</b><br>Zico Kolter (Carnegie Mellon University)<br>
                   Daniel Neil (Carnegie Mellon University)<br>
                   Vipin Kumar (University of Minnesota) <br>
                   Sendhil Mullainathan (Harvard)<br>
                   Bharat Rao (Deloitte)<br>
-                  Moderator: Arindam Banerjee (University of Minnesota)</td>
+                  <b>Moderator</b>:<br> Arindam Banerjee (University of Minnesota)</td>
               </tr>
               <tr>
                 <td>3:30-4:00</td>
@@ -181,11 +181,11 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
               <tr>
                 <td>4:00-5:00</td>
                 <td>Invited Panel: Matchmaking between Data Scientists and Social Problems &amp; Organizations</td> 
-                <td>Panelists:<br>
+                <td><b>Panelists:</b><br>
                   Chaitanya Baru (San Diego Supercomputer Center / NSF)<br>
                   Alaina Harkness (MacArthur Foundation)<br>
                   Todd Leen (NSF)<br>
-                  Moderator: Rayid Ghani (University of Chicago &amp; Edgeflip)</td>
+                  <b>Moderator</b>: <br>Rayid Ghani (University of Chicago &amp; Edgeflip)</td>
               </tr>
               <tr>
                 <td>5:00-6:00</td>
