--- a/kdd-dssg.html
+++ b/kdd-dssg.html
@@ -103,7 +103,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at filling these thr
       <p>
       The workshop will be held on August 24, 2014 at Bloomberg Headquarters (731 Lexington Ave New York, NY 10022)
     </p>
-
+</div>
 
 
 <div class="page-header">
