save arezzo files

--- a/kddworkshop/kdd-dssg.html
+++ b/kddworkshop/kdd-dssg.html
@@ -71,6 +71,7 @@ a {
         <h2>Workshop on Data Science for Social Good</h2>
         <p >Held in conjunction with <a href="http://www.kdd.org/kdd2014/">KDD 2014</a></p>
         <p >August 24, 2014 </a></p>
+         <p>Bloomberg Headquarters (731 Lexington Ave New York, NY 10022)</p>
         <p><a href="http://www.kdd.org/kdd2014/registration.html" class="btn btn-primary btn-lg" role="button">Register Now!</a></p>
 
       </div>
