save arezzo files

--- a/kddworkshop/index.html
+++ b/kddworkshop/index.html
@@ -249,7 +249,7 @@ The KDD 2014 Data Science for Social Good workshop is aimed at starting a conver
            <div class="col-xs-4 col-md-4">
                   <img src="images/lise.jpg">
                   <h5>Lise Getoor</h5>
-          <p>UCSC</p>
+          <p>University of California Santa Cruz</p>
              </div>     
              <div class="col-xs-4 col-md-4">
                   <img src="images/rayid.jpg">
